<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Ülgen</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_ba_lant_y_g_nd">Bağlantıyı gönder</string>
    <string name="msg">_________________             _________________</string>
    <string name="msg_hesap_olu_turar">Hesap oluşturarak <a href="">Ülgen Kullanım Şartlarını</a> kabul ediyorum ve <a href="">Gizlilik Beyanını</a> onaylıyorum.</string>
    <string name="msg_lgen_e_ho_gel">Ülgen\u2019e hoş geldin!</string>
    <string name="lbl_giri_yap"> Giriş yap</string>
    <string name="msg_lgen_hesab_na">Ülgen hesabına giriş yap</string>
    <string name="lbl_ad_soyad">Ad Soyad</string>
    <string name="msg_hesap_olu_turar2">Hesap oluşturarak </string>
    <string name="msg_lgen_hesab_n">Ülgen hesabını oluştur</string>
    <string name="lbl_e_mail">E-mail</string>
    <string name="lbl_ifre">Şifre</string>
    <string name="msg_lgen_kullan_m">Ülgen Kullanım Şartlarını</string>
    <string name="msg_ifreni_mi_unut">şifreni mi unuttun?</string>
    <string name="msg_zaten_hesab_n_v2">Zaten hesabın var mı?</string>
    <string name="lbl_giri_yap2">Giriş yap</string>
    <string name="lbl_ya_da">Ya da</string>
    <string name="msg_e_posta_adresin">E-posta adresine hesabına tekrar erişebilmen için\u2028şifre değiştirme bağlantısı yollayacağız.</string>
    <string name="msg_olas_afet_duru">Olası afet durumlarına karşı sevdiklerinin ve kendinin durumunu yetkililere bildir, hem de mobil cihazına dokunmadan.</string>
    <string name="msg_gizlilik_beyan">Gizlilik Beyanını</string>
    <string name="lbl_hesap_olu_tur">Hesap oluştur</string>
    <string name="lbl_onayl_yorum"> onaylıyorum.  </string>
    <string name="msg_zaten_hesab_n_v">Zaten hesabın var mı? Giriş yap</string>
    <string name="msg_kabul_ediyorum"> kabul ediyorum ve </string>
    <string name="msg_ifreni_mi_unut2">Şifreni mi unuttun?</string>
    <string name="location_permission_denied">Location permission was denied.</string>
    <string name="location_permission_denied_explanation">Location permission is needed to provide local weather data.</string>
    <string name="settings">Settings</string>

    <string name="msg_deprem_bilgilen">Deprem bilgilendirme kutusu</string>
    <string name="msg_g_nl_k_i_erik_k">Günlük içerik kutusu/görsel içerik</string>

    <string name="lbl_merhaba_faruk">Merhaba Faruk! </string>

    <string name="msg_alarm_d_d_k_ses">Alarm/düdük sesi tuşu kutusu(?)</string>
    <string name="msg_lgen_hesab_do">Ülgen hesabı doluluk oranı: %50</string>


    <string name="msg_kullan_c_genel">Kullanıcı genel bilgiler kutusu</string>

    <string name="msg_hesab_n_tamaml">Hesabını tamamlamak için tıkla!</string>
    <string name="login_failed">Geçersiz email veya şifre.</string>
    <string name="sign_up_failed">Girdiğiniz email sistemimizde kayıtlı.</string>
    <string name="sign_up_succesfull">Mailinize Onay Bağlantısı Gönderildi.</string>
    <string name="checkbox_not_checked"> Hesap oluşturabilmek için kutucuğu işaretleyin.</string>
    <string name="missing_input_error"> Bazı kutucuklarda boşluklar var. Lütfen doldurun.</string>

    <string name="lbl_ta_t_say_s">Taşıt sayısı</string>
    <string name="lbl_2">2</string>
    <string name="msg_ta_t_n_z_n_bul">Taşıtınızın bulunduğu</string>
    <string name="lbl_nceli_iniz_ne">Önceliğiniz ne?</string>
    <string name="msg_en_yak_ndaki_in">En yakındaki insanlara ulaşmak istiyorum</string>
    <string name="lbl_kisi_de">İkisi de</string>
    <string name="msg_olabildi_ince">Olabildiğince çok insana ulaşmak istiyorum</string>
    <string name="lbl_tamam">Tamam</string>
    <string name="lbl_enlem">Enlem</string>
    <string name="lbl_41_205616">41.205616</string>

    <string name="ulgen_agreement">Kullanım Koşulları\n\n1. Kabul:\n\nÜlgen uygulamasını ("Uygulama") kullanımınız bu Kullanım Koşullarını kabul ettiğinizi gösterir. Eğer bu koşulları kabul etmiyorsanız, lütfen uygulamayı kullanmayınız.\n\n2. Uygulama:\n\nUygulama, kullanıcılarına doğal afet durumlarında yardımcı olmak için tasarlanmıştır. Uygulama, aktif kullanıcıları belirler, yerlerini tespit eder ve bu bilgileri güvenli bir şekilde sunucularımıza iletir. Doğal afet durumunda, uygulama acil durum modunu aktive eder ve yardım etmek isteyen kullanıcılara yönlendirmeler sağlar.\n\n3. Veri Kullanımı:\n\nKullanıcılar, uygulamanın, cihazlarını tespit etmek ve hizmetlerini sunmak için belirli verileri toplamasına izin verir. Bu veriler, hizmetlerimizin sağlanması ve geliştirilmesi için kullanılır.\n\n4. Kullanıcı Sorumlulukları:\n\nUygulamanın kullanımı tamamen kullanıcının sorumluluğundadır. Kullanıcılar, uygulamayı kötüye kullanmamalı ve başkalarının haklarına zarar vermemelidir.\n\n6. Telif Hakkı, Fikri Mülkiyet ve Açık Kaynak Kullanımı:\n\nÜlgen, uygulamanın ve içeriğinin telif hakkı ve fikri mülkiyet haklarını saklı tutar. Bu uygulama kar amacı gütmeyen bir projedir ve kodu açık kaynak olarak sunulmuştur. Kullanıcılar, uygulamayı kişisel veya topluluk amaçlı kullanabilir ve geliştirebilirler. Ancak, uygulamanın, içeriğinin, veya açık kaynak kodunun, izinsiz şekilde pazarlanması kesinlikle yasaktır.\n\n6. Değişiklikler:\n\nÜlgen, bu Kullanım Koşullarını herhangi bir zamanda değiştirme hakkını saklı tutar. Kullanıcılar, düzenli olarak Kullanım Koşullarını gözden geçirmeli ve herhangi bir değişiklikten haberdar olmalıdır.\n\n7. Hukuk ve Yetki:\n\nBu Kullanım Koşulları, Türkiye Cumhuriyeti yasalarına tabidir ve bu yasalarla yorumlanacaktır. Kullanıcılar, bu Kullanım Koşullarının uygulanması veya yorumlanması ile ilgili her türlü ihtilafın çözümünde Türkiye Cumhuriyeti mahkemelerinin yetkili olduğunu kabul eder.</string>
    <string name="privacy_policy">Gizlilik Bildirimi\n\n1. Veri Sorumlusu:\n\nÜlgen, Türkiye Cumhuriyeti Kişisel Verilerin Korunması Kanunu (KVKK) uyarınca, kişisel verilerinizin sorumlusudur.\n\n2. Toplanan Veriler:\n\nUygulama, kullanıcılarının mobil cihazlarını tespit etmek ve hizmetlerini sunmak için belirli kişisel verileri toplar. Bu veriler yer, şehir ve lokal ağınızda bulunan cihazların bilgilerini içerir.\n\n3. Veri Kullanımı:\n\nTopladığımız veriler, yardım sunmak amacıyla kullanılır. Uygulamanın herhangi bir kâr gütme amacı yoktur. Verilerin toplanması ve kullanılması KVKK\'ya uygundur.\n\n4. Veri Paylaşımı:\n\nVerileriniz, depremden etkilenen bir şehirde olduğunuz taktirde yardım etmek insanlarla paylaşılacaktır. Bu paylaşım kullanıcı kimliğinizden bağımsız olarak yapılacak olup anonim kalacağınızdan emin olunacaktır.\n\n5. Veri Silme Talebi:\n\nKullanıcılar, Ülgen\'e başvurarak kişisel verilerinin silinmesini talep edebilir. Talebiniz, kanuni yükümlülüklerimiz ve mevcut teknolojik imkanlar dahilinde en kısa sürede işleme alınacak ve kişisel verileriniz silinecektir.\n\n6. Değişiklikler:\n\nBu Gizlilik Bildirimi, Ülgen tarafından herhangi bir zamanda değiştirilebilir. Kullanıcılarımız, düzenli olarak Gizlilik Bildirimimizi incelemeli ve herhangi bir değişiklikten haberdar olmalıdır.</string>


    <string name="lbl_dowload_and_forget_header">İndir ve Unut 🥳</string>
    <string name="lbl_dowload_and_forget_body">Artık güvendesiniz! Lokasyonunuz ve evinizde bulunan kişi sayısı sunucumuza şifreli bir biçimde aktarılmaktadır. Bundan sonra bu uygulamanın varlığını unutabilirsiniz, biz sizi güvende tutmak için gerekli aktarımları arka planda yapıyor olacağız. Herhangi bir âfet durumunda kendi imkanlarınızla kurtulabilirseniz, "Güvendeyim" butonuna tıklayıp arama kurtarma ekiplerinin daha verimli çalışmasını sağlayabilirsiniz.</string>

    <string name="lbl_route_and_help_header">Rota Çiz ve Yardım Et 😇</string>
    <string name="lbl_route_and_help_body">Herhangi bir âfet yaşandığında, en kısa sürede sunucularımızdan gerekli bölgeleri işaretleyip yardım modunu aktif edeceğiz. Biz bu aksiyonu aldıktan sonra, etkilenen alanlara rota çizebilecek ve kullanıcı yoğunluğunu izleyebileceksiniz. Bu özellikler sadece etkilenen bölgelerde aktif olup âfet olmayan zamanlarda kullanıma kapalı olacaktır. </string>

    <string name="msg_g_vende_misiniz">Güvende misiniz?</string>
    <string name="msg_g_vendeyseniz">Eğer etkilenen şehirlerden birindeyseniz, güvende olduğunuzu bize bildirerek arama kurtarma ekiplerinin daha verimli çalışmasını sağlayabilirsiniz.</string>
    <string name="msg_hesab_na_ho_ge">Hesabına Hoş Geldin!</string>
    <string name="lbl_ad">Ad</string>
    <string name="lbl_soyad">Soyad</string>
    <string name="lbl_e_mail_adresi">E-mail Adresi </string>
    <string name="msg_yetkililere_bil">Yetkililere bildirmek istediğiniz bir şey var mı?</string>
    <string name="msg_bilgilerimi_g_n">Bilgilerimi güncelle</string>
    <string name="lbl_k_yap">Çıkış Yap</string>
    <string name="lbl_i_am_safe">Güvendeyim.</string>










</resources>
