<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumn"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_89pxv"
        android:layout_marginEnd="@dimen/_2pxh"
        android:layout_marginStart="@dimen/_3pxh"
        android:layout_marginTop="@dimen/_52pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleyellow_50">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnfiftyone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <FrameLayout android:gravity="start"
                    android:id="@+id/frameStackfiftyone"
                    android:layout_height="@dimen/_442pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageFiftyOne"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_425pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_51}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_51"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtLgenehogel"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_42pxh"
                        android:layout_marginStart="@dimen/_42pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/msg_lgen_e_ho_gel"
                        style="@style/txtMontserratromanmedium35" tools:text="@string/msg_lgen_e_ho_gel"/>
                </FrameLayout>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_41pxv"
                    android:layout_width="match_parent"
                    android:text="@string/msg_olas_afet_duru"
                    style="@style/txtMontserratromanmedium22" tools:text="@string/msg_olas_afet_duru"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnHesapOlutur"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_68pxv"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_59pxv"
                    android:layout_width="@dimen/_322pxh"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_hesap_olu_tur"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_hesap_olu_tur"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtZatenhesabnv"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_66pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/msg_zaten_hesab_n_v"
                    style="@style/txtNunitomedium20" tools:text="@string/msg_zaten_hesab_n_v"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
