<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumndownload"
        android:layout_height="match_parent"

        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleyellow_51">
        <androidx.core.widget.NestedScrollView
            android:clipToPadding="false" android:fillViewport="true"
            android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearVehicleInfoSc"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:id="@+id/imageDownload"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_47pxh"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_download"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_download"/>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumntatsays"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTatsays"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_12pxh"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_ta_t_say_s"
                        style="@style/txtNunitobold24" tools:text="@string/lbl_ta_t_say_s"/>
                    <LinearLayout android:id="@+id/frameStacktwo"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_12pxh"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="@dimen/_322pxh"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/vehicleCount"
                            style="@style/txtNunitoregular64"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:background="@null"
                            android:hint="1"
                            android:text="2"
                            tools:text="@string/lbl_2" />

                        <View
                            android:background="@drawable/rectangle_bg_indigo_700_f2_radius_bl_1"
                            android:id="@+id/lineVehicletextfi"
                            android:layout_gravity="bottom|start"
                            android:layout_height="@dimen/_1pxv"

                             android:layout_width="@dimen/_322pxh"/>
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtTatnznbul"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_12pxh"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_47pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/msg_ta_t_n_z_n_bul"
                        style="@style/txtNunitobold24" tools:text="@string/msg_ta_t_n_z_n_bul"/>

                    <LinearLayout
                        android:id="@+id/linearLayoutLinearLayouts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_32pxv"
                        android:layout_marginEnd="@dimen/_9pxh"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <!-- First LinearLayout -->
                        <LinearLayout
                            android:id="@+id/linearEnlem1"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <EditText android:ellipsize="end" android:gravity="center"
                                android:id="@+id/latitude"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10pxv"
                                android:layout_width="match_parent"
                                android:singleLine="true"
                                android:background="@null"
                                android:hint="41.207115"
                                android:text="41.20"
                                style="@style/txtNunitoregular24" tools:text="@string/lbl_41_205616"/>

                            <View
                                android:background="@drawable/rectangle_bg_indigo_700_f2_radius_bl_1"
                                android:id="@+id/lineEmailusername1"
                                android:layout_gravity="center"
                                android:layout_height="@dimen/_1pxv"
                                android:layout_width="@dimen/_159pxh"/>

                            <TextView android:ellipsize="end" android:gravity="center" android:id="@+id/txtEnlem1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10pxv"
                                android:layout_width="wrap_content"
                                android:singleLine="true"
                                android:text="Enlem"
                                style="@style/txtNunitobold16" tools:text="@string/lbl_enlem"/>
                        </LinearLayout>

                        <!-- Second LinearLayout -->
                        <LinearLayout
                            android:id="@+id/linearEnlem2"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <EditText android:ellipsize="end" android:gravity="center"
                                android:id="@+id/longitude"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10pxv"
                                android:layout_width="match_parent"
                                android:singleLine="true"
                                android:background="@null"
                                android:hint="29.075848"
                                android:text="29.07"
                                style="@style/txtNunitoregular24" tools:text="@string/lbl_41_205616"/>

                            <View
                                android:background="@drawable/rectangle_bg_indigo_700_f2_radius_bl_1"
                                android:id="@+id/lineEmailusername2"
                                android:layout_gravity="center"
                                android:layout_height="@dimen/_1pxv"
                                android:layout_width="@dimen/_159pxh"/>

                            <TextView android:ellipsize="end" android:gravity="center" android:id="@+id/txtEnlem2"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10pxv"
                                android:layout_width="wrap_content"
                                android:singleLine="true"
                                android:text="Boylam"
                                style="@style/txtNunitobold16" tools:text="Boylam"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/multiSelectButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginTop="@dimen/_20pxh"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Şehirleri Seç:"
                            android:layout_marginEnd="8dp"
                            android:textSize="16sp" /> <!--Change the text size according to your need-->

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/magnified_glass"
                            />
                    </LinearLayout>


                    <TextView android:ellipsize="end"
                        android:id="@+id/txtNceliinizne"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_12pxh"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_30pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_nceli_iniz_ne"
                        style="@style/txtNunitobold18" tools:text="@string/lbl_nceli_iniz_ne"/>
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/linearSlider"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="match_parent"
                        android:orientation="vertical" >
                        <SeekBar
                            android:gravity="center_horizontal"
                            android:id="@+id/linearControl"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:max="4"
                            android:progress="2"
                            android:progressDrawable="@drawable/seekbar_progress_drawable"
                            android:thumb="@drawable/white_thumb"
                            android:splitTrack="false">

                        </SeekBar>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearRowenyakndakiin"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtEnyakndakiin"
                            style="@style/txtNunitobold14_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_weight="0.41"
                            android:ellipsize="end"
                            android:singleLine="false"
                            android:text="@string/msg_en_yak_ndaki_in"
                            android:textAlignment="center"
                            tools:text="@string/msg_en_yak_ndaki_in" />

                        <TextView
                            android:id="@+id/txtKiside"
                            style="@style/txtNunitobold16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_39pxh"
                            android:layout_marginBottom="@dimen/_19pxv"
                            android:layout_weight="0.15"
                            android:ellipsize="end"
                            android:singleLine="false"
                            android:text="@string/lbl_kisi_de"
                            android:textAlignment="center"
                            tools:text="@string/lbl_kisi_de" />

                        <TextView
                            android:id="@+id/txtOlabildiince"
                            style="@style/txtNunitobold14_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_23pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.44"
                            android:ellipsize="end"
                            android:singleLine="false"
                            android:text="@string/msg_olabildi_ince"
                            android:textAlignment="center"
                            tools:text="@string/msg_olabildi_ince" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnTamam"
                            style="@style/btnSolidRounded_2"
                            android:layout_width="@dimen/_293pxh"
                            android:layout_height="@dimen/_61pxv"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20pxv"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/lbl_tamam"
                            android:textAllCaps="false"
                            tools:text="@string/lbl_tamam" />

                    </FrameLayout>
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
